[gd_scene load_steps=7 format=3 uid="uid://dndalo2avvtvh"]

[ext_resource type="Theme" uid="uid://dskvusrskxbgf" path="res://asset/theme/main/alert.tres" id="1_as178"]
[ext_resource type="Script" path="res://scene/main/alert/alert_part.gd" id="1_yhgib"]

[sub_resource type="Animation" id="Animation_5owii"]
resource_name = "appear"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [80.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_y0qso"]
resource_name = "end"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [0.0, -60.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_pk8jg"]
resource_name = "end_hovered"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [0.0, -60.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.247059), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gnnjh"]
_data = {
"appear": SubResource("Animation_5owii"),
"end": SubResource("Animation_y0qso"),
"end_hovered": SubResource("Animation_pk8jg")
}

[node name="AlertPart" type="PanelContainer"]
self_modulate = Color(0.0846899, 0.0846899, 0.0846899, 1)
custom_minimum_size = Vector2(320, 0)
offset_right = 320.0
offset_bottom = 48.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme = ExtResource("1_as178")
script = ExtResource("1_yhgib")

[node name="Content" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="Texture_Icon" type="TextureRect" parent="Content"]
custom_minimum_size = Vector2(52, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
expand_mode = 5
stretch_mode = 5

[node name="TextContent" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label_Title" type="Label" parent="Content/TextContent"]
layout_mode = 2
horizontal_alignment = 1

[node name="Rich_Desc" type="RichTextLabel" parent="Content/TextContent"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
fit_content = true

[node name="Progress_End" type="ProgressBar" parent="."]
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2
step = 0.001
show_percentage = false

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gnnjh")
}
